Fixing typing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -155,13 +155,16 @@ body {
 }
 
 .code {
-    height: 62vh;
+    height: 80%;
     width: 100%;
 }
 
 .terminal {
-    height: 38vh;
+    height: 40%;
     width: 100%;
+}
+.terminal-wrap{
+    margin-top: 20px;
 }
 #active {
     color: #fff;
@@ -343,11 +346,27 @@ body {
 
 
 @media only screen and (max-width: 425px) {
+    .right {
+        position: relative;
+        top: 12;
+        float: right;
+        margin-right: 25px;
+    }
+    .left img {
+        width: 30px;
+        height: 30px;
+        position: relative;
+        top: 15;
+        left: 10
+    }
     .nav{
         width: 120%;
         height: 50px;
         background-color: #3C3C3C;
         margin: 0;
+    }
+    .side-nav{
+        display: none;
     }
 
     .container {
@@ -373,7 +392,7 @@ body {
 
     .code-area{
         background-color: #1E1E1E;
-        width: 90%;
+        width: 130%;
         height: 120vh;
     }
     .code-line{
@@ -390,7 +409,14 @@ body {
 }
 
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 393px) {
+    .left img {
+        width: 25px;
+        height: 25px;
+        position: relative;
+        top: 15;
+        
+    }
     .nav{
         width: 100%;
         height: 50px;
